data/derived/comb/progs/unify/prog1739.ml.out
Characters 27-45:
  let _ = Printf.printf "%*s"( string_of_int 1);;
                             ^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
